--- a/src/TravelMonkey/Views/MainPage.xaml
+++ b/src/TravelMonkey/Views/MainPage.xaml
@@ -60,6 +60,9 @@
                                 <Label Text="Recommendation" TextColor="#666" FontSize="16" FontFamily="LatoRegular" />
                             </StackLayout>
                         </Grid>
+                        <yummy:PancakeView.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="CurrentDestination_Tapped"/>
+                        </yummy:PancakeView.GestureRecognizers>
                     </yummy:PancakeView>
                 </Grid>
             </yummy:PancakeView>
